--- a/src/search.html
+++ b/src/search.html
@@ -1,5 +1,9 @@
 <html style="font-family: sans-serif;">
-
+  <head>
+    <meta charset="utf-8">
+    <title>Silviaherf's Foodie API</title>
+    <link rel="icon"type="image/png" href="https://images.assetsdelivery.com/compings_v2/aratehortua/aratehortua1904/aratehortua190400634.jpg">
+    </head>
 
 
     <style>
