--- a/src/html/search.html
+++ b/src/html/search.html
@@ -17,6 +17,14 @@
 
           text-align: center;margin-top: 300px;
         }
+
+        WebContainer{
+                width:100%;
+                min-width:1000px;
+                height:auto;
+            } 
+
+            
         </style>
 
     <form method="post" action="/search/results">
