--- a/src/html/upload_plate.html
+++ b/src/html/upload_plate.html
@@ -17,7 +17,13 @@
 
           text-align: center;margin-top: 300px;
         }
-        </style>
+
+        WebContainer{
+                width:100%;
+                min-width:1000px;
+                height:auto;
+            } 
+          </style>
 
     <form method="post" action="/calculate">
         <h2>Sube una fotografía de tu plato:</h2>
