--- a/src/html/calories.html
+++ b/src/html/calories.html
@@ -17,4 +17,13 @@
 
           text-align: center;margin-top: 340px;
         }
+
+
+        WebContainer{
+                width:100%;
+                min-width:1000px;
+                height:auto;
+            } 
+
+            
         </style>
