--- a/src/html/restaurants.html
+++ b/src/html/restaurants.html
@@ -19,6 +19,15 @@
 
           text-align: center;margin-top: 300px;
         }
+
+
+        WebContainer{
+                width:100%;
+                min-width:1000px;
+                height:auto;
+            } 
+
+            
         </style>
 
 
