intento format en html

--- a/src/html/calories.html
+++ b/src/html/calories.html
@@ -25,5 +25,12 @@
                 height:auto;
             } 
 
-            
+          </style> 
+
+
+        <h1>Los valores nutricionales de tu plato {{plate}} son los siguientes: {{calories}}:</h1>
+ 
+        
         </style>
+
+</body> 
