--- a/src/html/restaurants.html
+++ b/src/html/restaurants.html
@@ -5,7 +5,7 @@
     <link rel="icon"type="image/png" href="https://images.assetsdelivery.com/compings_v2/aratehortua/aratehortua1904/aratehortua190400634.jpg">
     </head>
 
-    
+  <body> 
 <h2>Estos son los resultados de tu búsqueda:</h2>
 
     <style>
@@ -31,8 +31,7 @@
         </style>
 
 
-
-<iframe src="output/mapa.html", height="600" width="800" title="Resultados"></iframe>
+<iframe src={{mapa}} , height="600" width="800" title="Resultados"></iframe>
 
 
 </body>
