nuevo endpoint para mapa html

--- a/src/html/restaurants.html
+++ b/src/html/restaurants.html
@@ -31,7 +31,9 @@
         </style>
 
 
-<iframe src={{mapa}} , height="600" width="800" title="Resultados"></iframe>
+<iframe src="/search/results/mapa" , height="600" width="800" title="Resultados"></iframe>
+
+
 
 
 </body>
