nuevo endpoint calculate/results

--- a/src/html/upload_plate.html
+++ b/src/html/upload_plate.html
@@ -39,7 +39,7 @@
           var output = document.getElementById('output_image');
           output.src = reader.result;
         }
-        reader.readAsDataURL(event.target.files[0]);
+        reader.readAsDataURL(event.target.files[0]); 
       }
     </script>
 
@@ -49,7 +49,7 @@
 
     <h2>O dime la URL de un plato:</h2>
     <b> <label for="text">Url:</label></b>
-    <input type="text" name="url" ><br><br>
+    <input name="url" type="text"><br><br>
   
   
   </p>
