icono mapa guay

--- a/src/html/warning2.html
+++ b/src/html/warning2.html
@@ -64,6 +64,8 @@
 
         <h2> ¡Ups! ¿Seguro que has escrito bien tu ubicación y lo que te apetece comer? </h2>
 
+        <h2> ¿Has seleccionado el rango de precio del desplegable? </h2>
+
         <h2> ¡Prueba de nuevo! </h2>
        
         <h2>  Sigues teniendo hambre, ¿verdad? </h2>
