en qe localidad

--- a/src/html/search.html
+++ b/src/html/search.html
@@ -72,7 +72,7 @@
             <form method="post" action="/search/results">
                 <h2>¿Qué quieres comer hoy?</h2>
                 <input name="food" type="text" />
-                <h2>¿En qué zona?</h2>
+                <h2>¿En qué localidad?</h2>
                 <input name="place" type="text" />
                 <h2>¿En qué rango de precio?</h2>
                 <input list="price" type="text" name="price" />
