ubicacion mapa por primer restaurante

--- a/src/html/search.html
+++ b/src/html/search.html
@@ -71,8 +71,10 @@
 
             <form method="post" action="/search/results">
                 <h2>¿Qué quieres comer hoy?</h2>
+                <h3>(Burger,pizza,italiano)</h3>
                 <input name="food" type="text" />
                 <h2>¿En qué localidad?</h2>
+                <h3>(Por ej: Bilbao; Salamanca, España; Chicago USA; elige tu formato)</h3>
                 <input name="place" type="text" />
                 <h2>¿En qué rango de precio?</h2>
                 <input list="price" type="text" name="price" />
