--- a/src/html/warning.html
+++ b/src/html/warning.html
@@ -63,7 +63,8 @@
 
 
         <h2> No hay resultados para tu búsqueda. </h2>
-          <h2>Por favor, inténtalo de nuevo con otro plato o una zona más amplia. </h2>
+          <h2>Por favor, inténtalo de nuevo con otro plato u otro rango de precio. </h2>
+          <h2>También puedes especificar una zona más amplia. </h2>
         <h2>  Sigues teniendo hambre, ¿verdad? </h2>
        
         <p><img src="/static/sad.jpg" 
